--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "backend1",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Primera entrega del proyecto de Backend",
+  "main": "src/app.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^5.1.0",
-    "uuid": "^13.0.0",
-    "type": "module"
+    "express": "^4.19.2",
+    "express-handlebars": "^7.1.2",
+    "socket.io": "^4.7.5",
+    "uuid": "^9.0.1"
   }
 }
