--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
+    "mongoose": "^8.19.1",
+    "mongoose-paginate-v2": "^1.9.1",
     "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   }
